[package]
name = "uniswap_info"
version = "0.1.0"
edition = "2018"

[lib]
name = "uniswap_info_lib"
path = "src/lib.rs"

[[bin]]
name = "uniswap_info_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.4.10"
reqwest = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
